pillar-web/src/styles/_utils.sass
/* Collection of mixins that can be plugged everywhere */

=clearfix
	&:after
		// Basically same as .clearfix from bootstrap
		clear: both
		display: block
		content: ' '

=container-behavior
	width: 100%

	+media-lg
		width: 1170px

		margin-left: auto
		margin-right: auto
		padding-right: 15px
		padding-left: 15px
		box-sizing: border-box

		&:before, &:after
			display: table
			content: " "

		&:after
			clear: both

@mixin button-rounded($mixin-color, $roundness)
	opacity: .9
	padding:
		left: 20px
		right: 20px

	text-transform: uppercase

	color: $mixin-color
	border: 1px solid $mixin-color
	border-radius: $roundness
	background-color: transparent
	transition: color 350ms ease-out, border 150ms ease-in-out, opacity 150ms ease-in-out, background-color 150ms ease-in-out
	text-shadow: none

	&:hover
		opacity: 1
		cursor: pointer
		color: $mixin-color
		border: 1px solid $mixin-color
		background-color: rgba($mixin-color, .1)

	&:active, &:focus
		outline: none
		box-shadow: none
		border-color: $mixin-color

	i
		margin-right: 10px

@mixin button-rounded-filled($mixin-color, $roundness)
	text-transform: uppercase
	opacity: .9
	padding:
		left: 20px
		right: 20px
	color: white
	border: 1px solid $mixin-color
	border-radius: $roundness
	background-color: $mixin-color
	text-shadow: none

	transition: color 350ms ease-out, border 150ms ease-in-out, opacity 150ms ease-in-out


	&:hover
		opacity: 1
		cursor: pointer
		color: white
		background-color: lighten($mixin-color, 5%)

	&:active, &:focus
		outline: none
		box-shadow: none
		border-color: lighten($mixin-color, 5%)

	i
		margin-right: 10px

@mixin overlay($from-color, $from-percentage, $to-color, $to-percentage)
	position: absolute
	top: 0
	left: 0
	right: 0
	bottom: 0
	background: linear-gradient(to bottom, $from-color $from-percentage, $to-color $to-percentage)


=container-box
	position: relative
	background-color: white
	border-radius: 3px
	box-shadow: 2px 2px 2px rgba(darken($color-background, 60%), .1)

=text-overflow-ellipsis
	overflow: hidden
	white-space: nowrap
	text-overflow: ellipsis

=position-center-translate
	position: absolute
	top: 50%
	left: 50%
	transform: translate(-50%, -50%)


/* Smallest, like phones on portrait.
 **  Menu is collapsed, columns stack, no brand */
=media-xs
	@media (max-width: #{$screen-tablet - 1px})
		@content

/* Small but wide: phablets, iPads
 **  Menu is collapsed, columns stack, no brand */
=media-sm
	@media (min-width: #{$screen-tablet}) and (max-width: #{$screen-desktop - 1px})
		@content

/* Tablets portrait.
 **  Menu is expanded, but columns stack, brand is shown */
=media-md
	@media (min-width: #{$screen-desktop})
		@content

=media-lg
	@media (min-width: #{$screen-lg-desktop})
		@content

=media-print
	@media print
		@content

=spin
	animation:
		name: spin-once
		duration: 1s
		delay: 0
		fill-mode: forwards
		iteration-count: infinite
		timing-function: linear

=spin-once
	+spin
	animation:
		iteration-count: 1

=pulse
	animation:
		name: pulse
		duration: 1s
		delay: 0
		fill-mode: forwards
		iteration-count: infinite

=pulse-75
	animation:
		name: pulse-75
		duration: 1s
		delay: 0
		fill-mode: forwards
		iteration-count: infinite

.spin
	position: relative
	+spin

@keyframes spin-once
	from
		transform: rotate(0deg)
	to
		transform: rotate(360deg)

@keyframes pulse
	0
		opacity: 1
	50%
		opacity: 0
	100%
		opacity: 1

@keyframes pulse-75
	0
		opacity: 1
	50%
		opacity: .8
	100%
		opacity: 1

@keyframes background-fill-left-right
	from
		background-position: right bottom
	to
		background-position: left bottom

=markdown-preview-container
	border-top: 1px solid $color-background
	border-bottom: 1px solid $color-background
	position: relative
	margin: 40px auto 25px auto
	padding: 10px 10px 25px 10px
	color: $color-text-dark-primary
	cursor: default
	transition: all 150ms ease-in-out

	img
		max-width: 100%

